--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 14rem; /* Adjust based on your header height */
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f2f2f2;
@@ -35,7 +39,7 @@ footer {
 #slideshow {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 500px;
   overflow: hidden;
 }
 
