--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ footer {
   /* Responsive styles for the About Section */
   #about {
     flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center align the items */
+    align-items: left; /* Center align the items */
     text-align: left; /* Center the text */
   }
 
