--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ footer {
   .about-text {
     width: 100%; /* Full width for the text */
     margin-bottom: 20px; /* Add spacing below the text */
+    align-items: left; /* Align text to the left */
   }
 
   /* Slideshow Adjustments */
