--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ footer {
 /* Slideshow Styles */
 #slideshow {
   position: relative;
-  width: 100%;
   height: 500px;
   overflow: hidden;
 }
@@ -199,8 +198,8 @@ footer {
   /* About Section Adjustments */
   #about {
     flex-direction: column; /* Stack items vertically */
-    align-items: left; /* Center align the items */
-    text-align: left; /* Center the text */
+    align-items: center; /* Center align the items */
+    text-align: center; /* Center the text */
   }
 
   .about-text {
@@ -213,9 +212,10 @@ footer {
   #slideshow {
     min-height: 300px;
     min-width: 150px;
-    width: 100%; /* Full width for the slideshow */
     height: auto; /* Let the height adjust based on the content */
     margin-top: 20px; /* Add spacing between the text and the slideshow */
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #slideshow img {
