--- a/style.css
+++ b/style.css
@@ -183,6 +183,14 @@ input[type="email"] {
   direction: ltr; /* Ensure input text is in RTL direction */
 }
 
+#userwayAccessibilityIcon {
+  left: 10px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  right: auto !important;
+  bottom: auto !important;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   /* Header Adjustments */
@@ -270,6 +278,14 @@ input[type="email"] {
     object-position: center;
     max-width: 100%; /* Slightly reduce the image size for mobile */
     max-height: 100%; /* Ensure the image fits within the container */
+  }
+
+  #userwayAccessibilityIcon {
+    left: 10px !important;
+    bottom: 20px !important;
+    top: auto !important;
+    right: auto !important;
+    transform: none !important;
   }
 
   footer {
